[gd_scene load_steps=2 format=3 uid="uid://freeroam_hud"]

[ext_resource type="Script" path="res://scripts/ui/freeroam_hud.gd" id="1"]

[node name="FreeRoamHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 950.0
offset_right = 250.0
offset_bottom = 1000.0
theme_override_font_sizes/font_size = 36
text = "0 MPH"

[node name="CashLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1670.0
offset_top = 50.0
offset_right = 1870.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 28
text = "$5000"
horizontal_alignment = 2

[node name="RepLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1670.0
offset_top = 90.0
offset_right = 1870.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 24
text = "Rep: 0"
horizontal_alignment = 2

[node name="NotificationPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 710.0
offset_top = 50.0
offset_right = 1210.0
offset_bottom = 200.0
visible = false

[node name="NotificationLabel" type="Label" parent="NotificationPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 480.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 24
text = "New Mission Available!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
